--- a/examples/activeKey.html
+++ b/examples/activeKey.html
@@ -229,12 +229,13 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.js"></script>
 <![endif]-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+  <link rel="stylesheet" href="activeKey.css" />
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1>rc-tabs@5.3.1</h1>
+            <h1>rc-tabs@5.3.2</h1>
             <p>tabs ui component for react</p>
         </div>
         <div class="example" id="__react-content"></div>
