--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@5.9.3 - tabs ui component for react</title>
+  <title>rc-tabs@6.0.0 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@5.9.3</h1>
+  <h1>rc-tabs@6.0.0</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -811,6 +811,18 @@ React.render(
           <td>String</td>
           <th></th>
           <td>tab nav &#39;s position. one of [&#39;left&#39;,&#39;right&#39;,&#39;top&#39;,&#39;bottom&#39;]</td>
+      </tr>
+      <tr>
+          <td>allowInkBar</td>
+          <td>Boolean</td>
+          <th>true</th>
+          <td>allow ink bar</td>
+      </tr>
+      <tr>
+          <td>allowScrollBar</td>
+          <td>Boolean</td>
+          <th>true</th>
+          <td>allow bar scrollable</td>
       </tr>
       <tr>
           <td>animation</td>
