--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@6.0.0 - tabs ui component for react</title>
+  <title>rc-tabs@6.0.1 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@6.0.0</h1>
+  <h1>rc-tabs@6.0.1</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -823,6 +823,12 @@ React.render(
           <td>Boolean</td>
           <th>true</th>
           <td>allow bar scrollable</td>
+      </tr>
+      <tr>
+          <td>styles</td>
+          <td>{nav, inkBar, bar}</td>
+          <th>{}</th>
+          <td>inline styles</td>
       </tr>
       <tr>
           <td>animation</td>
