--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@ React.render(
           <td>tab content style</td>
       </tr>
       <tr>
-          <td>animation</td>
+          <td>animated</td>
           <td>true</td>
           <th></th>
           <td>whether tabpane change with animation</td>
