--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@7.0.9 - tabs ui component for react</title>
+  <title>rc-tabs@7.0.10 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@7.0.9</h1>
+  <h1>rc-tabs@7.0.10</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -869,12 +869,18 @@ React.render(
           <th></th>
           <td>corresponding to activeKey</td>
       </tr>
-     <tr>
+      <tr>
+          <td>style</td>
+          <td>Object</td>
+          <th></th>
+          <td></td>
+      </tr>
+      <tr>
          <td>placeholder</td>
          <td>React.Node</td>
          <th></th>
          <td>lazyrender children</td>
-     </tr>
+      </tr>
       <tr>
           <td>tab</td>
           <td>React.Node</td>
