--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@7.0.13 - tabs ui component for react</title>
+  <title>rc-tabs@7.1.0 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@7.0.13</h1>
+  <h1>rc-tabs@7.1.0</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -963,7 +963,14 @@ React.render(
           <td>true</td>
           <th></th>
           <td>whether tabpane change with animation</td>
-      </tr><br>    </tbody>
+      </tr>
+      <tr>
+          <td>animatedWithMargin</td>
+          <td>false</td>
+          <th></th>
+          <td>whether animate tabpane with css margin</td>
+      </tr>
+    </tbody>
 </table>
 
 <h3>lib/SwipeableTabContent<a id="user-content-lib/swipeabletabcontent" name="lib/swipeabletabcontent" class="anchor" aria-hidden="true" href="#lib/swipeabletabcontent"><span class="octicon octicon-link"></span></a></h3><p>swipeable tab panes, in addition to lib/TabContent props, extra props: </p>
