--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@7.2.0 - tabs ui component for react</title>
+  <title>rc-tabs@7.3.0 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@7.2.0</h1>
+  <h1>rc-tabs@7.3.0</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -949,7 +949,33 @@ React.render(
     </tbody>
 </table>
 
-<h3>lib/ScrollableInkTabBar<a id="user-content-lib/scrollableinktabbar" name="lib/scrollableinktabbar" class="anchor" aria-hidden="true" href="#lib/scrollableinktabbar"><span class="octicon octicon-link"></span></a></h3><p>scrollable tab bar with ink indicator, same with tab bar/ink bar props.</p>
+<h3>lib/ScrollableTabBar<a id="user-content-lib/scrollabletabbar" name="lib/scrollabletabbar" class="anchor" aria-hidden="true" href="#lib/scrollabletabbar"><span class="octicon octicon-link"></span></a></h3><p>scrollable tab bar, in addition to tab bar props, extra props:</p>
+<table class="table table-bordered table-striped">
+    <thead>
+      <tr>
+          <th style="width: 100px;">name</th>
+          <th style="width: 50px;">type</th>
+          <th>default</th>
+          <th>description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+          <td>onPrevClick</td>
+          <td>(e: Event): void</td>
+          <th></th>
+          <td>callback when prev button is clicked</td>
+      </tr>
+      <tr>
+          <td>onNextClick</td>
+          <td>(e: Event): void</td>
+          <th></th>
+          <td>callback when next button is clicked</td>
+      </tr>
+    </tbody>
+</table>
+
+<h3>lib/ScrollableInkTabBar<a id="user-content-lib/scrollableinktabbar" name="lib/scrollableinktabbar" class="anchor" aria-hidden="true" href="#lib/scrollableinktabbar"><span class="octicon octicon-link"></span></a></h3><p>scrollable tab bar with ink indicator, same with tab bar and ink bar and scrollable bar props.</p>
 <h3>lib/SwipeableInkTabBar (Use for Mobile)<a id="user-content-lib/swipeableinktabbar-(use-for-mobile)" name="lib/swipeableinktabbar-(use-for-mobile)" class="anchor" aria-hidden="true" href="#lib/swipeableinktabbar-(use-for-mobile)"><span class="octicon octicon-link"></span></a></h3><p>swipeable tab bar with ink indicator, same with tab bar/ink bar props, and below is the additional props.</p>
 <table class="table table-bordered table-striped">
     <thead>
