--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@7.5.0 - tabs ui component for react</title>
+  <title>rc-tabs@8.0.0-beta.0 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@7.5.0</h1>
+  <h1>rc-tabs@8.0.0-beta.0</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -875,7 +875,7 @@ React.render(
           <td>key</td>
           <td>Object</td>
           <th></th>
-          <td>corresponding to activeKey</td>
+          <td>corresponding to activeKey, should be unique</td>
       </tr>
       <tr>
           <td>style</td>
@@ -1045,7 +1045,7 @@ React.render(
     </tbody>
 </table>
 
-<h3>lib/SwipeableTabContent<a id="user-content-lib/swipeabletabcontent" name="lib/swipeabletabcontent" class="anchor" aria-hidden="true" href="#lib/swipeabletabcontent"><span class="octicon octicon-link"></span></a></h3><p>swipeable tab panes, in addition to lib/TabContent props, extra props: </p>
+<h3>lib/SwipeableTabContent<a id="user-content-lib/swipeabletabcontent" name="lib/swipeabletabcontent" class="anchor" aria-hidden="true" href="#lib/swipeabletabcontent"><span class="octicon octicon-link"></span></a></h3><p>swipeable tab panes, in addition to lib/TabContent props, extra props:</p>
 <table class="table table-bordered table-striped">
     <thead>
       <tr>
