--- a/examples/activeKey.html
+++ b/examples/activeKey.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>activeKey.js - example - rc-tabs@7.5.0</title>
+  <title>activeKey.js - example - rc-tabs@8.0.0-beta.0</title>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8"/>
@@ -257,13 +257,13 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
     document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
   }
   </script>
-  <link rel="stylesheet" href="common.css" />
+  <link rel="stylesheet" href="../common.css" />
 </head>
 
 <body>
   <div class="container">
     <div class="header">
-      <h1>rc-tabs@7.5.0</h1>
+      <h1>rc-tabs@8.0.0-beta.0</h1>
 
       <p>tabs ui component for react</p>
     </div>
@@ -349,7 +349,7 @@ ReactDOM.render(&lt;Demo /&gt;, document.getElementById('__react-content'));
          data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
   </a>
   <script>FastClick.attach(document.body);</script>
-  <script src="common.js?nowrap"></script>
+  <script src="../common.js?nowrap"></script>
   <script src="activeKey.js?nowrap"></script>
 </body>
 
