--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@9.1.11 - tabs ui component for react</title>
+  <title>rc-tabs@9.2.0 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@9.1.11</h1>
+  <h1>rc-tabs@9.2.0</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -931,6 +931,12 @@ React.render(
         <td>React Node</td>
         <th></th>
         <td>extra content placed one the right of tab bar</td>
+      </tr>
+      <tr>
+        <td>tabBarGutter</td>
+        <td>number</td>
+        <th></th>
+        <td>the gap between tabs</td>
       </tr>
     </tbody>
 </table>
