--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rc-tabs@9.2.5 - tabs ui component for react</title>
+  <title>rc-tabs@9.2.6 - tabs ui component for react</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rc-tabs@9.2.5</h1>
+  <h1>rc-tabs@9.2.6</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -841,6 +841,12 @@ React.render(
         <td>How to render tab content</td>
       </tr>
       <tr>
+         <td>navWrapper</td>
+         <td>(tabContent: React.Node):React.Node</td>
+         <th></th>
+         <td>Wrapper function that will wrap around tab panes, whould be useful for features such as drag and drop</td>
+      </tr>
+      <tr>
           <td>onChange</td>
           <td>(key: string): void</td>
           <th></th>
@@ -916,7 +922,7 @@ React.render(
     <tbody>
       <tr>
           <td>onTabClick</td>
-          <td>(key: string): void</td>
+          <td>(key: string, event: MouseEvent): void</td>
           <th></th>
           <td>callback when tab clicked</td>
       </tr>
