--- a/examples/~debug2.html
+++ b/examples/~debug2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>~debug2.js - example - rc-tabs@9.4.5</title>
+  <title>~debug2.js - example - rc-tabs@9.4.6</title>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8"/>
@@ -263,7 +263,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 <body>
   <div class="container">
     <div class="header">
-      <h1>rc-tabs@9.4.5</h1>
+      <h1>rc-tabs@9.4.6</h1>
 
       <p>tabs ui component for react</p>
     </div>
@@ -337,7 +337,7 @@ class Demo extends React.Component {
             activeKey={this.state.activeKey}
             onChange={this.onChange}
           &gt;
-            &lt;TabPane tab={`tab ${start}`} key="1"&gt;
+            &lt;TabPane tab={`tab ${start}11111111111111111`} key="1"&gt;
               &lt;PanelContent id={start} /&gt;
             &lt;/TabPane&gt;
             &lt;TabPane tab={`tab ${start + 1}`} key="2"&gt;
