--- a/examples/activeKey.html
+++ b/examples/activeKey.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>activeKey.js - example - rc-tabs@9.4.8</title>
+  <title>activeKey.js - example - rc-tabs@9.4.9</title>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8"/>
@@ -263,7 +263,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 <body>
   <div class="container">
     <div class="header">
-      <h1>rc-tabs@9.4.8</h1>
+      <h1>rc-tabs@9.4.9</h1>
 
       <p>tabs ui component for react</p>
     </div>
@@ -310,6 +310,12 @@ class Demo extends React.Component {
     });
   }
 
+  handleNotExistKey = () =&gt; {
+    this.setState({
+      activeKey: '-1',
+    });
+  }
+
   render() {
     const start = this.state.start;
     return (
@@ -336,6 +342,11 @@ class Demo extends React.Component {
           &lt;/TabPane&gt;
         &lt;/Tabs&gt;
         &lt;button onClick={this.tick}&gt;rerender&lt;/button&gt;
+        &lt;button onClick={this.handleNotExistKey}
+          style={{ marginLeft: 10 }}
+        &gt;
+          change to a non-existent activeKey
+        &lt;/button&gt;
       &lt;/div&gt;
     );
   }
